--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,9 +22,15 @@ android {
         }
     }
     compileOptions {
+
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+
     }
+
+    testOptions {
+        animationsDisabled = true
+       }
 }
 
 dependencies {
